[SearchDrawer] Added function for toggling scrollbar on Hamburger click  and fixed styling

--- a/src/containers/App/partials/SearchDrawer.module.css
+++ b/src/containers/App/partials/SearchDrawer.module.css
@@ -6,8 +6,6 @@
   top: 0;
   left: 0;
   background-color: #f3f3f3;
-  overflow-y: hidden;
-  transition: 0.5s;
 }
 
 .searchIsOpen {
@@ -25,7 +23,7 @@
   width: 100%;
   text-align: center;
   margin-top: 30px;
-  padding: 15px;
+  overflow: hidden;
 }
 
 .input {
